2008-04-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	*  libavogadro/src/tools/align.png,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/aligntool.qrc: New icon for align tool.

	* avogadro/src/mainwindow.cpp: Fix up Mac/Windows save dialogs.
	Also disable save/revert menu actions until the document is modified.

	* avogadro/src/savedialog.cpp: Remove incorrect #ifdef for setting
	filters on Mac. Now done in mainwindow.cpp. Use static QFileDialog
	on Windows (and Mac).

2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Several fixes
	suggested by Michael Banck in bugs 1954108, 1954101 and 1954099.

2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Only recalculate the
	isosurface when editing is finished, minimum spinner value of zero.

	* avogadro/src/mainwindow.cpp: Tracked the bug of the disappearing
	molecule - it was never set for extensions after the first window.

	* libavogadro/src/extensions/orbitalextension.cpp: Return if the file
	name is empty.

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Made the reset
	button work. Also connect molecule signals to the dialog.

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Update the
	preview when setMolecule is called. Also added some logic to disable
	basis sets with certain theories.

	* libavogadro/src/extensions/basisset.cpp: Actually call the doD and
	doD5 functions - this really helps when trying to use d-type
	orbitals to generate cubes...

	* libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/extensions/gaussianextension.*,
	libavogadro/src/extensions/gaussianinputdialog.*: Added a new Gaussian
	input deck generator. Still quite basic with a few bugs but is already
	generating valid input decks.

2008-04-27  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp,