@@ -6,23 +6,33 @@
     <x>0</x>
     <y>0</y>
     <width>621</width>
-    <height>907</height>
+    <height>553</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Avogadro</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="avogadro.qrc" >:/icons/avogadro.png</iconset>
+   <iconset resource="avogadro.qrc" >
+    <normaloff>:/icons/avogadro.png</normaloff>:/icons/avogadro.png</iconset>
   </property>
-  <widget class="QWidget" name="centralWidget" />
+  <widget class="QWidget" name="centralWidget" >
+   <property name="geometry" >
+    <rect>
+     <x>79</x>
+     <y>56</y>
+     <width>276</width>
+     <height>474</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QMenuBar" name="menubar" >
    <property name="geometry" >
     <rect>
      <x>0</x>
      <y>0</y>
      <width>621</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp" >
@@ -96,6 +106,9 @@
     <addaction name="separator" />
     <addaction name="actionFullScreen" />
     <addaction name="actionSetBackgroundColor" />
+    <addaction name="separator" />
+    <addaction name="actionDisplayAxes" />
+    <addaction name="actionDebugInformation" />
    </widget>
    <widget class="QMenu" name="menuEdit" >
     <property name="title" >
@@ -132,8 +145,25 @@
    <addaction name="menuSettings" />
    <addaction name="menuHelp" />
   </widget>
-  <widget class="QStatusBar" name="statusbar" />
+  <widget class="QStatusBar" name="statusbar" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>530</y>
+     <width>621</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QToolBar" name="fileToolBar" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>26</y>
+     <width>621</width>
+     <height>30</height>
+    </rect>
+   </property>
    <property name="windowTitle" >
     <string>Main Toolbar</string>
    </property>
@@ -156,6 +186,14 @@
    <addaction name="actionQuitTool" />
   </widget>
   <widget class="QDockWidget" name="projectDock" >
+   <property name="geometry" >
+    <rect>
+     <x>361</x>
+     <y>56</y>
+     <width>260</width>
+     <height>474</height>
+    </rect>
+   </property>
    <property name="minimumSize" >
     <size>
      <width>165</width>
@@ -163,7 +201,7 @@
     </size>
    </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Project</string>
@@ -172,6 +210,14 @@
     <number>2</number>
    </attribute>
    <widget class="QWidget" name="projectWidget" >
+    <property name="geometry" >
+     <rect>
+      <x>2</x>
+      <y>24</y>
+      <width>256</width>
+      <height>448</height>
+     </rect>
+    </property>
     <layout class="QVBoxLayout" >
      <property name="spacing" >
       <number>6</number>
@@ -202,8 +248,16 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="toolsDock" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>56</y>
+     <width>73</width>
+     <height>115</height>
+    </rect>
+   </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Tools</string>
@@ -211,11 +265,28 @@
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="toolsWidget" />
+   <widget class="QWidget" name="toolsWidget" >
+    <property name="geometry" >
+     <rect>
+      <x>2</x>
+      <y>24</y>
+      <width>69</width>
+      <height>89</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QDockWidget" name="enginesDock" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>177</y>
+     <width>73</width>
+     <height>112</height>
+    </rect>
+   </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Engines</string>
@@ -223,29 +294,73 @@
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="enginesWidget" />
+   <widget class="QWidget" name="enginesWidget" >
+    <property name="geometry" >
+     <rect>
+      <x>2</x>
+      <y>24</y>
+      <width>69</width>
+      <height>86</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QDockWidget" name="engineConfigurationDock" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>295</y>
+     <width>73</width>
+     <height>114</height>
+    </rect>
+   </property>
    <property name="windowTitle" >
     <string>Configuration</string>
    </property>
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="engineConfigurationWidget" />
+   <widget class="QWidget" name="engineConfigurationWidget" >
+    <property name="geometry" >
+     <rect>
+      <x>2</x>
+      <y>24</y>
+      <width>69</width>
+      <height>88</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QDockWidget" name="enginePrimitivesDock" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>415</y>
+     <width>73</width>
+     <height>115</height>
+    </rect>
+   </property>
    <property name="windowTitle" >
     <string>Primitives</string>
    </property>
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="enginePrimitivesWidget" />
+   <widget class="QWidget" name="enginePrimitivesWidget" >
+    <property name="geometry" >
+     <rect>
+      <x>2</x>
+      <y>24</y>
+      <width>69</width>
+      <height>89</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <action name="actionOpen" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/fileopen.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Open</string>
@@ -256,7 +371,8 @@
   </action>
   <action name="actionOpenTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/fileopen.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Open</string>
@@ -264,7 +380,8 @@
   </action>
   <action name="actionQuit" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/exit.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/exit.png</normaloff>:/icons/exit.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Quit</string>
@@ -275,7 +392,8 @@
   </action>
   <action name="actionQuitTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/exit.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/exit.png</normaloff>:/icons/exit.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Quit</string>
@@ -293,7 +411,8 @@
   </action>
   <action name="actionNew" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/filenew.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/filenew.png</normaloff>:/icons/filenew.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;New</string>
@@ -304,7 +423,8 @@
   </action>
   <action name="actionNewTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/filenew.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/filenew.png</normaloff>:/icons/filenew.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;New</string>
@@ -312,7 +432,8 @@
   </action>
   <action name="actionClose" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/fileclose.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/fileclose.png</normaloff>:/icons/fileclose.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Close</string>
@@ -323,7 +444,8 @@
   </action>
   <action name="actionCloseTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/fileclose.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/fileclose.png</normaloff>:/icons/fileclose.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Close</string>
@@ -331,7 +453,8 @@
   </action>
   <action name="actionSave" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/filesave.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/filesave.png</normaloff>:/icons/filesave.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Save</string>
@@ -342,7 +465,8 @@
   </action>
   <action name="actionSaveTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/filesave.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/filesave.png</normaloff>:/icons/filesave.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Save</string>
@@ -350,7 +474,8 @@
   </action>
   <action name="actionSaveAs" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/filesaveas.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/filesaveas.png</normaloff>:/icons/filesaveas.png</iconset>
    </property>
    <property name="text" >
     <string>Save &amp;As...</string>
@@ -361,7 +486,8 @@
   </action>
   <action name="actionRevert" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/revert.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/revert.png</normaloff>:/icons/revert.png</iconset>
    </property>
    <property name="text" >
     <string>Revert To Saved</string>
@@ -369,7 +495,8 @@
   </action>
   <action name="actionExportGraphics" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/fileexport.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/fileexport.png</normaloff>:/icons/fileexport.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Export Graphics</string>
@@ -377,7 +504,8 @@
   </action>
   <action name="actionFullScreen" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/window_fullscreen.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/window_fullscreen.png</normaloff>:/icons/window_fullscreen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Full Screen Mode</string>
@@ -385,7 +513,8 @@
   </action>
   <action name="actionSetBackgroundColor" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/colorize.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/colorize.png</normaloff>:/icons/colorize.png</iconset>
    </property>
    <property name="text" >
     <string>Set &amp;Background Color...</string>
@@ -398,7 +527,8 @@
   </action>
   <action name="actionUndo" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/undo.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/undo.png</normaloff>:/icons/undo.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Undo</string>
@@ -409,7 +539,8 @@
   </action>
   <action name="actionRedo" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/redo.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/redo.png</normaloff>:/icons/redo.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Redo</string>
@@ -420,7 +551,8 @@
   </action>
   <action name="actionNewView" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/tab_new.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/tab_new.png</normaloff>:/icons/tab_new.png</iconset>
    </property>
    <property name="text" >
     <string>New View</string>
@@ -431,7 +563,8 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/tab_remove.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/tab_remove.png</normaloff>:/icons/tab_remove.png</iconset>
    </property>
    <property name="text" >
     <string>Close View</string>
@@ -439,7 +572,8 @@
   </action>
   <action name="actionCenter" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/navigate.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/navigate.png</normaloff>:/icons/navigate.png</iconset>
    </property>
    <property name="text" >
     <string>Center</string>
@@ -447,7 +581,8 @@
   </action>
   <action name="actionPaste" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/paste.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/paste.png</normaloff>:/icons/paste.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Paste</string>
@@ -458,7 +593,8 @@
   </action>
   <action name="actionCopy" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/copy.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/copy.png</normaloff>:/icons/copy.png</iconset>
    </property>
    <property name="text" >
     <string>Copy</string>
@@ -469,7 +605,8 @@
   </action>
   <action name="actionCut" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/cut.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/cut.png</normaloff>:/icons/cut.png</iconset>
    </property>
    <property name="text" >
     <string>Cut</string>
@@ -504,7 +641,8 @@
   </action>
   <action name="configureAvogadroAction" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >:/icons/tool.png</iconset>
+    <iconset resource="avogadro.qrc" >
+     <normaloff>:/icons/tool.png</normaloff>:/icons/tool.png</iconset>
    </property>
    <property name="text" >
     <string>Configure Avogadro...</string>
@@ -526,6 +664,22 @@
   <action name="actionDuplicateView" >
    <property name="text" >
     <string>Duplicate View</string>
+   </property>
+  </action>
+  <action name="actionDisplayAxes" >
+   <property name="checkable" >
+    <bool>true</bool>
+   </property>
+   <property name="text" >
+    <string>Display Axes</string>
+   </property>
+  </action>
+  <action name="actionDebugInformation" >
+   <property name="checkable" >
+    <bool>true</bool>
+   </property>
+   <property name="text" >
+    <string>Debug Information</string>
    </property>
   </action>
  </widget>
