@@ -1,3 +1,8 @@
+2008-04-30  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* avogadro/src/mainwindow.cpp, avogadro/src/mainwindow.ui: Updated
+	with new view menu actions for axes and debug information.
+
 2008-04-29  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	*  libavogadro/src/tools/align.png,
